src/stylus/_media.styl
@media (max-width:1300px)
  .header__top
    padding: 28px 8px 0






@media (max-width:1200px)
  .g-wrapper
    width 100%
  .shadow-text
    margin-left 50px
  .menu
    width 100%
    justify-content: center
    margin 12px 0 20px
    &__submenu
      background-color rgba(41,39,50,1)
  .header
    &__mouse
      left 10%
    &__top
      flex-wrap: wrap
      justify-content: center
    &__about
      margin 0 10%
    &__title, &__text
      width 100%
  .services
    &__item
      flex-basis: 50%
      padding-left: 50px

    &__title
      width 100%
  .portfolio
    &__buttons
      padding 0 8px
    &__more
      white-space: nowrap;
      font-size: 20px;
    &__header
      font-size 30px
    &__text
      font-size 15px
    &__block
      flex-basis 100%
  .team
    padding 100px 0 0 0
    &__block
      flex-wrap: wrap
    &__post
      margin-bottom 20px
    &__img
      margin-bottom 20px
      width inherit
    &__person
      flex-basis: 100%
      margin-right 0
      margin-bottom 60px
      &_basis
        flex-basis: 50%
  .clients
    &__item
      flex-basis: 50%
  .blog
    &__block
      flex-wrap: wrap
    &__item
      flex-basis: 100%
      padding 12px
      margin-bottom 40px
      margin-right 0
  .feedback
    &__block
      flex-direction: column
      justify-content: center
      align-items: center
    &__grid
      width 100%
      text-align center
    &__anonce
      width 100%
    &__form
      width 80%
  .link__more_pdf
    display: block;
    margin: 0 auto 90px;
  .link__more_big_marg
    margin-top 30px
  .navigation
    padding 0 12px
    &__col
      flex-basis: auto
      margin-right 38px
  .about
    &__team
      width 85%
      display: block
      margin 0 auto
    &__block
      flex-direction: column
    &__grid
      padding 0 12px
      margin-bottom 20px
  .calc__footer img
    display none
  .analytics__block
    flex-wrap: wrap
  .prices__footer
    flex-wrap: wrap;
    justify-content: center;
    flex-direction: column
    margin-bottom 20px
    line-height: inherit
  .feedback__item
    width 100%
  .feedback__name, .feedback__text
    margin 0 auto
  .feedback__name
    margin-bottom 12px
  .feedback__name:after
    width 100%
    bottom -4px
  .analytics
    &__item
      flex-basis: 50%
  .prices
    padding 100px 12px 100px 12px
  .features
    &__grid
      flex-basis: 100%
      padding 0 12px
      &:first-child
        display none
  .made
    &__block
      padding 0 12px
  .steps
    padding: 140px 0 100px 0;
    &__image
      display none
    &__header
      font-size: 28px
    &__text
      font-size 16px
    &__content
      display flex
      flex-direction: column
      justify-content: center
      align-items: center
      padding 0 12px
      margin-bottom 40px
    &__planet
      display none
    &__number_1
      padding-left 30px
    &__step
      width 100%
      position static
      margin-bottom 24px
      & .steps__description
        width 100%
  .calc
    padding-left 12px
    padding-right 12px
    &__col
      flex-basis: calc(100% / 12 * 6)
    &__footer
      margin-bottom 60px
  .services
    padding-top 100px
  .thanks
    padding 100px 0 0 0









@media (max-width: 700px)
  .hamburger
    display block
  .wrapper
    width 100%
    overflow-x: hidden
  .shadow-text
    font-size 24px
    margin-bottom 68px
    &:before
      font-size 30px
      top -14px
  .header
    display flex
    justify-content: center
    min-height 100vh
    &__top
      display none
    &__title
      font-size 32px
      line-height: 36px
      margin-bottom 30px
    &__text
      font-size 16px
    &__main
      height: auto
  .services__item
    flex-basis: 100%
    margin 0px 0 150px 0
  .services__title
    font-size 20px
  .portfolio
    &__mob
      padding-top 70px
    &__content
      padding 46px 0 0 40px
    &__mobile
      display block
    &__buttons
      display none
    &__block
      flex-basis: 100%
      height 298px
    &__float
      top 40px
      padding 6px 14px 6px 40px
      font-size 11px
    &__button
      margin 0 20px 15px 0
    &__header
      font-size: 18px
    &__text
      font-size: 15px
      max-width: 150px
  .clients
    &__item
      flex-basis: 50%
    &__img
      width 70%
      display: block
      margin: 0 auto
  .promotion
    &__block
      flex-wrap: wrap
      margin: 56px 0 48px 0px;
    &__item
      flex-basis: 100%
      &:before
        margin-right 8px
    &__title
      font-size 28px
      line-height: 42px;
  .navigation
    flex-wrap wrap
    &__col
      flex-basis: 50%;
      margin-right 0
      margin-bottom 40px
      &:last-child
        flex-basis: 100%;
  .analytics
    &__name
      margin-bottom: 26px
      font-size: 18px;
      font-weight: 700;
      line-height: 24px;
    &__block
      margin-bottom 60px
    &__item
      flex-basis: 100%
      padding: 26px 0 0px 0;
      margin-bottom 70px
    &__title
      margin-bottom 4px
    &__img
      margin-bottom 12px
    &__cost
      font-size: 18px;
      font-weight: 800;
      margin-bottom 42px

    &__content
      margin-bottom: 28px
      & p
        font-size: 13px;
        font-weight: 400;
        line-height: 19px;
        padding 0 20px
  .features
    padding 60px 0 0 0
    &__item
      flex-basis: 100%
      padding 0 40px
    &__footer
      height: auto
    &__content
      padding: 30px 0 60px 0;
    &__callback
      margin 0 0 20px 0
      width 100%
      text-align: center
      font-size: 20px
      line-height: 30px
      padding 0 20px
    &__content
      flex-wrap: wrap
    &__subtitle
      width 100%
    &__text
      width 100%
    &__title
      font-size: 24px;
      font-weight: 700;
      line-height: 36px;
      padding 0 30px
      margin-bottom 50px
  .made
    padding 80px 0 0 0
    background-size inherit
    &__description
      font-size 13px
    &__name
      font-size 18px
    &__block
      justify-content: center
    &__item
      flex-basis 100%
  .prices
    padding: 0px 12px 0px 12px
    &__name
      font-size 18px
    &__img
      margin-right 25px
    &__block
      justify-content: center
      margin-bottom 0
    &__item
      flex-basis 100%
      margin-bottom: 40px;
    &__content
      margin-bottom 20px
      & p
        font-size 15px
    &__footer
      flex-direction: column
      justify-content: space-around
    &__title
      margin-bottom 20px
    &__cost
      margin-bottom 28px
      font-size 18px
      line-height: inherit
  .software
    &__title
      margin-bottom 40px
    &__skill
      flex-basis: 100%
      margin-bottom 30px
      &_about
        font-size 13px
      &__name
        font-size 14px
        margin-bottom 16px
    &__footer
      flex-wrap: nowrap
      flex-direction: column;
    &__cost
      margin-bottom 24px
      margin-right: 0
      font-size 20px
    &__name
      font-size: 20px;
      line-height: 26px;
  .calc
    padding 0
    padding-top 60px
    &__col
      flex-basis: calc(100% / 12 * 12)
    &__price
      margin-bottom 60px
    &__footer-header
      font-size 20px
      margin-bottom 12px
    &__phone
      font-size 14px
      line-height: inherit
    &__header
      font-size 22px
      padding 0 30px
    &__content
      margin-bottom 40px

  .feedback
    padding 80px 0
    &__title
      font-size 18px
      margin-bottom: 60px
    &__block
      display block
    &__anonce
      font-size 16px
      padding 0 55px
      display: inline
      text-align: justify
      margin-bottom 60px
      & span
        font-size 16px
        margin-bottom 0
        display: inline
    &__submit
      font-size 16px
      &:after
        font-size 16px
  .clients, .blog
    background-size inherit
    padding 80px 0 0 0
  .callback
    &__title
      text-align center
      white-space: normal
      width 340px
    &__content .header__button
      align-self: center
      transform: translateY(24px)
  .nopad
   padding: 0px 12px 60px 12px !important
  .uppad
    padding-top 80px !important

  .steps
    &__header
      font-size 20px
      margin-bottom: 16px
    &__text
      font-size 12px
      line-height: 19px;
    & .steps__description
      align-self: flex-start;
      padding-top: 20px;
  .rocket
    &__text
      font-size: 20px;
      font-weight: 700;
      line-height: 27px;
    &__lines
      margin-top -16px
  .link
    &__more
      font-size 15px
      &:after
        top 4px
        right -14px
        font-size 14px
      &_big_marg
        font-size 23px
        &:after
          font-size 23px
          top 4px

  .team
    &__img
      width 70%
    &__person
      &_basis
        flex-basis: 100%
    &__name
      font-size 18px
    &__post
      font-size 12px
      &:after
        bottom: -22px;
        left: 30%
    &__descript
      font-size: 12px
  .contacts
    &__map
      height 394px
  .feedback__name,.feedback__text
    margin: 0 100px 0 12px;
    text-align: left;
  .feedback__name
    font-size: 20px;
    margin-bottom 34px
    &:after
      bottom -20px
  .blog
    &__img
      width 100%
      height 274px
      margin-bottom 14px
    &__title
      font-size: 22px
    &__description
      font-size 14px
      margin-bottom 14px
    &__anonce
      margin-bottom 8px
      font-size 13px
  .navigation
    &__title
      font-size 18px
      margin-bottom: 22px
    &__link
      font-size 14px
      margin-bottom 20px
  .footer
    &__contacts
      font-size 14px
  .about
    &__block
      margin-bottom 40px
      padding-bottom 40px
    &__title
      font-size 24px
    &__team
      margin-top 20px
    &__anonce
      font-size 13px
      line-height: 21px
      &:before
        left 0
        top -4px
    &__grid
      & img
        width 84%
    &__text
      font-size 14px
      padding 24px 40px
    &__img_cubick
      width: 70% !important
      margin-bottom: 20px;
  .software
    &__separator
      margin-bottom: 20px

